# dubalot

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  video_editor.py
dubalot/: __init__.py  __main__.py  lip_sync.py  pipeline.py  synthesizer.py  transcriber.py  translator.py  video_processor.py  voice_clone.py
dubalot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dubalot/: __init__.py  cli.py  extractor.py  lip_sync.py  mixer.py  pipeline.py  synthesizer.py  transcriber.py  translator.py
src/dubalot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_extractor.py  test_lip_sync.py  test_main.py  test_mixer.py  test_pipeline.py  test_synthesizer.py  test_transcriber.py  test_translator.py  test_video_editor.py  test_video_processor.py  test_voice_clone.py
